# rt-vqm

./: CMakeLists.txt  README.md
src/: calculate_roi.cu  calculate_roi.h  collapse.cu  collapse.h  compare_dual_feature.cu  compare_dual_feature.h  compare_feature.cu  compare_feature.h  cuda_block_static.cu  cuda_block_static.h  cuda_dll_features.cu  cuda_dll_features.h  cuda_dll_model.cu  cuda_dll_model.h  cuda_filter.cu  cuda_filter.h  cuda_filter_ati.cu  cuda_filter_ati.h  cuda_format.cu  cuda_format.h  cuda_read_video.cu  cuda_read_video.h  main.cu  main.h  st_collapse.cu  st_collapse.h
